# presidio-ai-enablement-training

./: .gitignore
week1/ai-comparison-with-context/: chatgpt.html  prompt.md
week1/ai-model-comparison-sheet/: chatgpt-index.html  claude-index.html  comparison-sheet.md  deepseek-index.html  gemini-flash.html
week1/rag-chatbot/: chatbot.py  create-vector-db.py  readme.md  requirements.txt
week1/rag-chatbot/utils/: chatbot_utils.py  document_utils.py  search_utils.py  vector_db.py
week2/prompt-optimization/: optimization.md
week2/prompt-security/: security-and-caching.md
week3/: agents-vs-workflows.pptx  email-agent-workflow.json
week4/: README.md  create-vector-db.py  main.py  mcp-server.py  pyproject.toml  requirements.txt
week4/utils/: agent.py  document_utils.py  search_utils.py  vector_db.py
week5/: README.md  create-vector-db.py  main.py  pyproject.toml
week5/utils/: constants.py  nodes.py  states.py  tools.py
week5/utils/rag/: document_utils.py  search_utils.py  vector_db.py
week6/bedrock-agent/: README.md  main.py  pyproject.toml
week6/langfuse-nemorails/: README.md  about-company.txt  agent.py  agent_eval_report.md  evaluate.py  main.py  pyproject.toml  system_prompt.txt
week6/langfuse-nemorails/guardrails_config/: config.yml  prompts.yml  safety_flows.co
