[project]
name = "week5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "ddgs>=9.10.0",
    "langchain>=1.2.6",
    "langchain-aws>=1.2.1",
    "langchain-community>=0.4.1",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.2.0",
]