[project]
name = "langfuse-nemorails"
version = "0.1.0"
description = "A modular LangChain agent with tools for calculations and weather"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentevals>=0.0.9",
    "ddgs>=9.10.0",
    "langchain>=1.2.7",
    "langchain-aws>=1.2.1",
    "langchain-community>=0.4.1",
    "langfuse>=3.12.0",
    "nemoguardrails>=0.20.0",
    "python-dotenv>=1.2.1",
]
